# modern-cpp-blockchain

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
apps/: CMakeLists.txt
apps/BlockChainExample/: CMakeLists.txt
apps/BlockChainExample/src/: BlockChainExample.cpp
apps/SpdlogMinimalExample/src/: SpdlogMinimalExample.cpp
doc/: info.dox
modules/: CMakeLists.txt
modules/blockchain/: CMakeLists.txt
modules/blockchain/include/mcb/: block.h  block_chain.h  codec.h  db.h  logger.h  pow.h  raw_block.h
modules/blockchain/src/: block.cpp  block_chain.cpp  codec.cpp  db.cpp  pow.cpp
test/: CMakeLists.txt  test_codec.cpp  test_db.cpp
